--- a/inventory/src/main/resources/application.properties
+++ b/inventory/src/main/resources/application.properties
@@ -4,12 +4,11 @@ server.port=8081
 axon.serializer.general=jackson
 axon.serializer.events=jackson
 axon.serializer.messages=jackson
-
 # Without server
 axon.axonserver.enabled=false
 
-# Email uniqueness validation
-axon.eventhandling.processors.validateUniqueEmail.mode=subscribing
+# Mongo
+spring.data.mongodb.uri=mongodb://localhost:27017/demo8inventory
 
 # Kafka
 #axon.kafka.clientid=kafka-axon-example
@@ -20,20 +19,6 @@ axon.eventhandling.processors.validateUniqueEmail.mode=subscribing
 
 # Spring Cloud Configuration
 #spring.config.import=optional:consul:
-
-# Mongo
-spring.data.mongodb.uri=mongodb://localhost:27017/demo8user
-spring.data.mongodb.database=demo8user
-#axon.mongo.database-name=demo8axon
-#axon.mongo.event-store.enabled=true
-#axon.mongo.token-store.enabled=true
-#axon.mongo.saga-store.enabled=true
-#mongo.event-store.enabled=true
-#mongo.token-store.enabled=true
-#mongo.saga-store.enabled=true
-#spring.data.event-store.enabled=true
-#spring.data.token-store.enabled=true
-#spring.data.saga-store.enabled=true
 
 # Consul
 #spring.cloud.consul.discovery.instance-id=demo8axon
