--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -6,6 +6,8 @@ axon.serializer.messages=jackson
 # Without server
 axon.axonserver.enabled=false
 
+# Mongo
+spring.data.mongodb.uri=mongodb://localhost:27017/demo8user
 
 # Kafka
 #axon.kafka.clientid=kafka-axon-example
@@ -16,20 +18,6 @@ axon.axonserver.enabled=false
 
 # Spring Cloud Configuration
 #spring.config.import=optional:consul:
-
-# Mongo
-spring.data.mongodb.uri=mongodb://localhost:27017/demo8inventory
-spring.data.mongodb.database=demo8inventory
-#axon.mongo.database-name=demo8axon
-#axon.mongo.event-store.enabled=true
-#axon.mongo.token-store.enabled=true
-#axon.mongo.saga-store.enabled=true
-#mongo.event-store.enabled=true
-#mongo.token-store.enabled=true
-#mongo.saga-store.enabled=true
-#spring.data.event-store.enabled=true
-#spring.data.token-store.enabled=true
-#spring.data.saga-store.enabled=true
 
 # Consul
 #spring.cloud.consul.discovery.instance-id=demo8axon
