--- a/inventory/build.gradle
+++ b/inventory/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
 	implementation project(':common')
+	implementation project(':inventory-api')
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.axonframework:axon-spring-boot-starter'
