--- a/order/build.gradle
+++ b/order/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
 	implementation project(':common')
-	implementation project(':inventory')
-	implementation project(':user')
+	implementation project(':inventory-api')
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.axonframework:axon-spring-boot-starter'
