--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'demo8axon'
 
 include 'common'
+include 'user-api'
 include 'user'
 include 'inventory-api'
 include 'inventory'
