--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
 subprojects {
     repositories {
         mavenCentral()
+        // maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+        // As per https://bitbucket.org/snakeyaml/snakeyaml/wiki/CVE-2022-1471 Spring is not affected
     }
 
     apply plugin: 'java'
@@ -24,8 +26,11 @@ subprojects {
     dependencyManagement {
         imports {
             mavenBom "org.axonframework:axon-bom:4.7.0"
-            // mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.1"
         }
+    }
+
+    dependencies {
+        implementation 'org.jetbrains:annotations:24.0.0'
     }
 
     test {
