Split projects into separate Command and Query applications does not build

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,12 @@
 rootProject.name = 'demo8axon'
 
 include 'common'
-include 'user-api'
-include 'user'
 include 'inventory-api'
-include 'inventory'
-include 'order'
+include 'user-api'
+include 'order-api'
+include 'inventory-cmd'
+include 'user-cmd'
+include 'order-cmd'
+include 'inventory-query'
+include 'user-query'
+include 'order-query'
