--- a/inventory-query/build.gradle
+++ b/inventory-query/build.gradle
@@ -1,14 +1,16 @@
 dependencies {
-	implementation project(':inventory-api')
+    implementation project(':inventory-api')
 
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'com.h2database:h2'
-	implementation 'org.axonframework:axon-spring-boot-starter'
-	implementation 'com.google.protobuf:protobuf-java:3.21.7'
-	// implementation 'org.yaml:snakeyaml:2.0-SNAPSHOT'
-	// As per https://bitbucket.org/snakeyaml/snakeyaml/wiki/CVE-2022-1471 Spring is not affected
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.h2database:h2'
+    implementation 'org.axonframework:axon-spring-boot-starter'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.axonframework:axon-test'
+    // Security
+    implementation 'com.google.protobuf:protobuf-java:3.21.7'
+    // implementation 'org.yaml:snakeyaml:2.0-SNAPSHOT'
+    // As per https://bitbucket.org/snakeyaml/snakeyaml/wiki/CVE-2022-1471 Spring is not affected
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.axonframework:axon-test'
 }
