--- a/inventory-query/build.gradle
+++ b/inventory-query/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
     implementation 'org.axonframework:axon-spring-boot-starter'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
     // Security
     implementation 'com.google.protobuf:protobuf-java:3.21.7'
