--- a/order-cmd/build.gradle
+++ b/order-cmd/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation 'org.axonframework:axon-spring-boot-starter'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    compileOnly 'org.projectlombok:lombok'
 
     // security
     implementation 'com.google.protobuf:protobuf-java:3.21.7'
