--- a/inventory-cmd/build.gradle
+++ b/inventory-cmd/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
 	// security
 	implementation 'com.google.protobuf:protobuf-java:3.21.7'
