--- a/order-query/build.gradle
+++ b/order-query/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation 'org.axonframework:axon-spring-boot-starter'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
     // Security
     implementation 'com.google.protobuf:protobuf-java:3.21.7'
